fixed various words and spacing

--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -1,7 +1,7 @@
 .cv{
   margin-top: 0.5em;
   margin-bottom: 1em;
-  padding: 1.5em 2em;
+  padding: 1em 2em;
   font-size: 14px;
   line-height: normal;
 }
@@ -41,7 +41,7 @@
 
 .cv main table td{
   vertical-align: top;
-  padding: 3px 3px 3px 0;
+  padding: 2px 3px 3px 0;
 }
 
 .cv main table tr.other{
